--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -23,18 +23,20 @@ jobs:
         run: |
           mkdir -p Guidelime_ClassicWoWdotLive
           mv *.{lua,toc} Guidelime_ClassicWoWdotLive/
-          zip Guidelime_ClassicWoWdotLive-master.zip Guidelime_ClassicWoWdotLive/
+          zip Guidelime_ClassicWoWdotLive-master.zip Guidelime_ClassicWoWdotLive/*.{lua,toc}
       - name: Create Release
+        if: github.ref == 'refs/heads/master'
         id: create_release
         uses: actions/create-release@v1.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: "0.11303.42-${{ github.ref }}"
-          release_name: master (${{ github.ref }}) CI for client 11303
+          tag_name: "0.11303.42-${{ github.sha }}"
+          release_name: master (${{ github.sha }}) CI for client 11303
           draft: false
           prerelease: false
       - name: Upload addon .zip to CI release
+        if: github.ref == 'refs/heads/master'
         id: upload-release-asset
         uses: actions/upload-release-asset@v1.0.1
         env:
